--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <artifactId>s-match-nlp</artifactId>
     <packaging>jar</packaging>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.0-ROQUE-SNAPSHOT</version>
     <name>S-Match NLP</name>
     <description>S-Match NLP contains preprocessors for converting natural language into logical formulas.</description>
 
@@ -31,7 +31,7 @@
     	<dependency>
             <groupId>it.unitn.disi.sweb</groupId>
             <artifactId>scroll-core</artifactId>
-            <version>3.0.1-SNAPSHOT</version>
+            <version>3.0.1-ROQUE-SNAPSHOT</version>
         </dependency>
         
         <dependency>
