--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
         <dependency>
             <groupId>it.unitn.disi</groupId>
             <artifactId>s-match-core</artifactId>
-            <version>2.0.0-SNAPSHOT</version>
+            <version>2.0.0-ROQUE-SNAPSHOT</version>
         </dependency>
 
         <dependency>
